Added navigation to subscribe screen and test http request handler class

--- a/R3S/app/src/main/AndroidManifest.xml
+++ b/R3S/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
             android:label="@string/title_activity_entry_info"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".activities.SubscribeActivity" >
+        </activity>
     </application>
 
 </manifest>
