--- a/R3S/app/src/main/AndroidManifest.xml
+++ b/R3S/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nikolay.r3s" >
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -34,16 +36,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.EntriesActivity"
-            android:label="@string/title_activity_entries"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-        <activity
             android:name=".activities.EntryInfoActivity"
             android:label="@string/title_activity_entry_info"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity android:name=".activities.SubscribeActivity" >
+        </activity>
+        <activity android:name=".activities.EntriesActivity" >
         </activity>
     </application>
 
