--- a/R3S/app/src/main/AndroidManifest.xml
+++ b/R3S/app/src/main/AndroidManifest.xml
@@ -38,11 +38,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.EntryInfoActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_entry_info"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activities.SubscribeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
@@ -53,6 +48,11 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity
+            android:name=".activities.ContentActivity"
+            android:label="@string/title_activity_content"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -62,7 +62,6 @@
             android:name="com.facebook.FacebookContentProvider"
             android:authorities="com.facebook.app.FacebookContentProvider990512607637574"
             android:exported="true" />
-
     </application>
 
 </manifest>
